load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//kernel:kernel": "",
        "//lib/runtime:runtime": "",
        "//lib/runtime:common_test": "--platforms=@local_config_platform//:host --test_sharding_strategy=explicit --test_output=errors --sandbox_default_allow_network=false",
        "//lib/runtime:allocator_test": "--platforms=@local_config_platform//:host --test_sharding_strategy=explicit --test_output=errors --sandbox_default_allow_network=false",
    },
)
