module(name = "bolt")

#
# Constraints / Configuration for cross-platform setup.
#
bazel_dep(name = "platforms", version = "0.0.8")

#
# Utilities
#
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "stardoc", version = "0.6.2")

# For compile_commands.json generation.
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "eca42c63700fccdc49cf58177e0a96f0f6075a68",
)

#
# Rules
#
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_python", version = "0.27.1")

#
# Python
#
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.12",
    ignore_root_user_error = True,
)

#
# Testing
#
bazel_dep(name = "catch2", version = "3.4.0")

#
# Assembly
#
bazel_dep(name = "nasm", version = "2.14.02")

#
# Non-Module Dependencies
#
non_module_dependencies = use_extension("//:bazel/extensions.bzl", "non_module_dependencies")

use_repo(non_module_dependencies, "limine")
use_repo(non_module_dependencies, "xorriso")
